Fix spacing around nav and hero

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
 
 .herobackground{
     background-color: #1f2937;
-    padding: 50px 50px;
+    padding: 10px 50px 80px 50px;
 }
 nav{
     display:flex;
@@ -32,6 +32,15 @@ nav{
 
 ul{
     list-style-type: none;
+}
+
+.informationtitle{
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: bolder;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0px;
 }
 
 .herobox{
